--- a/CSPI/contact.html
+++ b/CSPI/contact.html
@@ -30,7 +30,7 @@
         <section class="contact">
             <h2>Contact</h2>
             <p>For inquiries about our research, services, or training, feel free to contact us below.</p>
-            <form action="submit_form.php" method="post">
+            <form action="https://formspree.io/f/mdkonavn" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
